# algorithm

./: CMakeLists.txt
inc/: avl_tree.h  dc_sort.h  debug.h  heap_sort.h  m_type.h  public.h  quick_sort.h
src/: CMakeLists.txt  avl_tree.c  dc_sort.c  debug.c  heap_sort.c  quick_sort.c  t_main.c
